# QCrossword

./: CMakeLists.txt  COPYRIGHT.txt  QCrossword.docx  README.md  crucigrama.json  crucigrama1.json
extras/: Mejoras.txt
extras/autodefinidos/: autodefinido1.xml  autodefinido4.xml  prueba.xml
extras/autodefinidos/pack1/: auto1.xml
extras/rc/: ini_bottom_down.psd
include/: Crossword.h  CrosswordData.h  DataManager.h  StatusManager.h
include_qt/: QCrosswordScene.h  QCrosswordSquare.h  QCrosswordView.h  QRowsColsWidget.h  QSquareInfo.h  QWidgetMainWindow.h  QWidgetSplashScreen.h  ZoomWidget.h  rows_cols_widget.ui  squareInfo.ui
src/: Crossword.cpp  CrosswordData.cpp  QCrosswordScene.cpp  QCrosswordSquare.cpp  QCrosswordView.cpp  QRowsColsWidget.cpp  QSquareInfo.cpp  QWidgetMainWindow.cpp  QWidgetSplashScreen.cpp  ZoomWidget.cpp  imagenes.qrc  main.cpp
src/old/: QSquare.cpp  QSquare.h  QWidgetCentral.cpp  QWidgetCentral.h  QWidgetCrossword.cpp  QWidgetCrossword.h
systemLayer/: CMakeLists.txt
systemLayer/include/: linuxSystem.h  linuxSystemFunctions.h  system.h  systemLayer.h  systemLayer_defs.h  systemLayer_exp.h  windowsSystem.h
systemLayer/src/: linuxSystem.cpp  system.cpp  windowsSystem.cpp
